Font files moved and wrong font path in css fixed

--- a/style/less/vars.less
+++ b/style/less/vars.less
@@ -16,14 +16,14 @@
 	font-style: normal;
 	font-weight: normal;
 	//src:url('menuglobal.eot'); // <- for IE
-	src:local('MetaNormal-Roman'), url('menuglobal.ttf') format('opentype');
+	src:local('MetaNormal-Roman'), url('../fonts/menuglobal.ttf') format('opentype');
 }
 @font-face{
 	font-family:'Heading';
 	font-style: normal;
 	font-weight: bold;
 	//src:url('menu1.eot'); // <- for IE
-	src:local('MetaBold-Roman'), url('menu1.ttf') format('opentype');
+	src:local('MetaBold-Roman'), url('../fonts/menu1.ttf') format('opentype');
 }
 
 
